@@ -1,38 +1,80 @@
 package com._pi.benepick.domain.draws.service;
 
+import com._pi.benepick.domain.draws.dto.DrawsRequest;
 import com._pi.benepick.domain.draws.dto.DrawsResponse;
+import com._pi.benepick.domain.draws.entity.Draws;
 import com._pi.benepick.domain.draws.repository.DrawsRepository;
+import com._pi.benepick.domain.draws.service.algorithm.DrawAlgorithm;
+import com._pi.benepick.domain.draws.service.algorithm.RaffleDraw;
+import com._pi.benepick.domain.goods.entity.Goods;
 import com._pi.benepick.domain.goods.entity.GoodsStatus;
+import com._pi.benepick.domain.goods.repository.GoodsRepository;
 import com._pi.benepick.domain.goodsCategories.repository.GoodsCategoriesRepository;
 import com._pi.benepick.domain.draws.entity.Status;
+import com._pi.benepick.domain.members.entity.Members;
+import com._pi.benepick.domain.members.entity.Role;
+import com._pi.benepick.domain.members.repository.MembersRepository;
+import com._pi.benepick.domain.raffles.entity.Raffles;
+import com._pi.benepick.domain.raffles.repository.RafflesRepository;
+import com._pi.benepick.global.common.exception.ApiException;
+import com._pi.benepick.global.common.response.code.status.ErrorStatus;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import org.apache.poi.ss.usermodel.Cell;
+import org.apache.poi.ss.usermodel.Row;
+import org.apache.poi.ss.usermodel.Sheet;
+import org.apache.poi.ss.usermodel.Workbook;
+import org.apache.poi.xssf.usermodel.XSSFWorkbook;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class DrawsQueryServiceImpl implements DrawsQueryService {
 
+    private final GoodsRepository goodsRepository;
+    private final MembersRepository membersRepository;
     private final DrawsRepository drawsRepository;
+    private final RafflesRepository rafflesRepository;
     private final GoodsCategoriesRepository goodsCategoriesRepository;
+    private final RedisTemplate<String, Object> redisTemplate;
 
-    public DrawsResponse.DrawsResponseByGoodsListDTO getWaitlistByGoodsId(Long goodsId) {
+    public DrawsResponse.DrawsResponseByGoodsListDTO getResultByGoodsId(Long goodsId) {
         List<DrawsResponse.DrawsResponseByGoodsDTO> drawsResponseByGoodsDTOS = (drawsRepository.findByGoodsId(goodsId)).stream()
-                .filter(draws -> draws.getStatus() == Status.WAITLIST)
+                .filter(draws -> draws.getStatus() == Status.WINNER || draws.getStatus() == Status.CONFIRM)
                 .map(DrawsResponse.DrawsResponseByGoodsDTO::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return DrawsResponse.DrawsResponseByGoodsListDTO.builder()
                 .drawsResponseByGoodsDTOList(drawsResponseByGoodsDTOS)
                 .build();
     }
 
-    public DrawsResponse.DrawsResponseByGoodsListDTO getWinnersByGoodsId(Long goodsId) {
+    public DrawsResponse.DrawsResponseByGoodsListDTO getWaitlistByGoodsId(Members members, Long goodsId) {
+        if (!(members.getRole().equals(Role.ADMIN))) throw new ApiException(ErrorStatus._UNAUTHORIZED);
+        List<DrawsResponse.DrawsResponseByGoodsDTO> drawsResponseByGoodsDTOS = (drawsRepository.findByGoodsId(goodsId)).stream()
+                .filter(draws -> draws.getStatus() == Status.WAITLIST)
+                .map(DrawsResponse.DrawsResponseByGoodsDTO::from)
+            .toList();
+
+        return DrawsResponse.DrawsResponseByGoodsListDTO.builder()
+                .drawsResponseByGoodsDTOList(drawsResponseByGoodsDTOS)
+                .build();
+    }
+
+    public DrawsResponse.DrawsResponseByGoodsListDTO getWinnersByGoodsId(Members members, Long goodsId) {
+        if (!(members.getRole().equals(Role.ADMIN))) throw new ApiException(ErrorStatus._UNAUTHORIZED);
         List<DrawsResponse.DrawsResponseByGoodsDTO> drawsResponseByGoodsDTOS = (drawsRepository.findByGoodsId(goodsId)).stream()
                 .filter(draws -> draws.getStatus() != Status.WAITLIST && draws.getStatus() != Status.NON_WINNER)
                 .map(DrawsResponse.DrawsResponseByGoodsDTO::from)
-                .collect(Collectors.toList());
+            .toList();
 
         return DrawsResponse.DrawsResponseByGoodsListDTO.builder()
                 .drawsResponseByGoodsDTOList(drawsResponseByGoodsDTOS)
@@ -40,6 +82,8 @@ public class DrawsQueryServiceImpl implements DrawsQueryService {
     }
 
     public DrawsResponse.DrawsResponseByMembersListDTO getCompleteRafflesByMemberId(String memberId) {
+        Members members = membersRepository.findById(memberId).orElseThrow(() -> new ApiException(ErrorStatus._UNAUTHORIZED));
+        if (!(members.getRole().equals(Role.ADMIN))) throw new ApiException(ErrorStatus._UNAUTHORIZED);
         List<DrawsResponse.DrawsResponseByMembersDTO> drawsResponseByMembersDTOS = (drawsRepository.findByMemberId(memberId)).stream()
                 .filter(draws -> draws.getRaffleId().getGoodsId().getGoodsStatus() == GoodsStatus.COMPLETED)
                 .map(draws -> {
@@ -47,12 +91,71 @@ public class DrawsQueryServiceImpl implements DrawsQueryService {
 
                     return DrawsResponse.DrawsResponseByMembersDTO.of(draws, categoryName);
                 })
-                .collect(Collectors.toList());
+            .toList();
 
         return DrawsResponse.DrawsResponseByMembersListDTO.builder()
                 .drawsResponseByMembersList(drawsResponseByMembersDTOS)
                 .build();
     }
 
+    public void downloadExcel(Members members, Long goodsId, HttpServletResponse response) {
+        if (!(members.getRole().equals(Role.ADMIN))) {
+            throw new ApiException(ErrorStatus._UNAUTHORIZED);
+        }
+
+        List<Draws> drawsList = drawsRepository.findByGoodsId(goodsId);
+
+        // 변경 가능한 리스트 사용
+        List<List<String>> data = new ArrayList<>();
+        data.add(Arrays.asList("Name", "ID", "Status", "Sequence"));
+
+        for (Draws draws : drawsList) {
+            data.add(
+                    Arrays.asList(
+                            draws.getRaffleId().getMemberId().getName(),
+                            String.valueOf(draws.getRaffleId().getMemberId().getId()),
+                            draws.getStatus().toString(),
+                            String.valueOf(draws.getSequence())
+                    )
+            );
+        }
+
+        // Create a new workbook and sheet
+        Workbook workbook = new XSSFWorkbook();
+        Sheet sheet = workbook.createSheet("Sheet1");
+
+        Cell cell = null;
+        Row row = null;
+
+        row = sheet.createRow(0);
+
+        for (int j = 0; j < data.size(); j++) {
+            List<String> rowdata = data.get(j);
+            for (int i = 0; i < rowdata.size(); i++) {
+                cell = row.createCell(i);
+                cell.setCellValue(rowdata.get(i));
+            }
+
+        }
+
+        int rowCount = 0;
+        for (List<String> dto : data) {
+            row = sheet.createRow(rowCount++);
+            for (int i = 0; i < dto.size(); i++) {
+                cell = row.createCell(i);
+                cell.setCellValue(dto.get(i));
+            }
+        }
+
+        response.setContentType("ms-vnd/excel");
+        response.setHeader("Content-Disposition", "attachment;filename=student.xlsx");
+
+        try {
+            workbook.write(response.getOutputStream());
+            workbook.close();
+        } catch (IOException e) {
+            throw new ApiException(ErrorStatus._FILE_OUTPUT_DISABLED);
+        }
+    }
 
 }
