@@ -1,6 +1,8 @@
 package com._pi.benepick.domain.goods.service;
 
 import com._pi.benepick.domain.categories.entity.Categories;
+import com._pi.benepick.domain.goods.entity.GoodsFilter;
+import com._pi.benepick.domain.goods.entity.GoodsStatus;
 import com._pi.benepick.domain.goodsCategories.entity.GoodsCategories;
 import com._pi.benepick.domain.goods.dto.GoodsResponse;
 import com._pi.benepick.domain.goods.entity.Goods;
@@ -14,15 +16,14 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.data.domain.Sort;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional
+@Transactional(readOnly = true)
 public class GoodsQueryServiceImpl implements GoodsQueryService {
 
     private final GoodsRepository goodsRepository;
@@ -41,7 +42,7 @@ public class GoodsQueryServiceImpl implements GoodsQueryService {
     // 상품 목록 조회 (+ 검색)
     @Override
     public GoodsResponse.GoodsListResponseDTO getGoodsList(Integer page, Integer size, String keyword) {
-        PageRequest pageRequest = PageRequest.of(page, size);
+        PageRequest pageRequest = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "id"));
         Page<Goods> goodsPage;
 
         if (keyword != null && !keyword.isEmpty()) {
@@ -52,7 +53,7 @@ public class GoodsQueryServiceImpl implements GoodsQueryService {
 
         List<GoodsResponse.GoodsResponseDTO> goodsDTOList = goodsPage.getContent().stream()
                 .map(GoodsResponse.GoodsResponseDTO::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return GoodsResponse.GoodsListResponseDTO.builder()
                 .goodsDTOList(goodsDTOList)
@@ -69,20 +70,45 @@ public class GoodsQueryServiceImpl implements GoodsQueryService {
 
     // 상품 검색
     @Override
-    public GoodsResponse.GoodsListSearchResponseDTO searchGoods() {
-        List<Goods> goodsList = goodsRepository.findAll();
+    public GoodsResponse.GoodsListSearchResponseDTO searchGoods(GoodsStatus goodsStatus, Integer page, Integer size, String keyword, GoodsFilter sortBy, String category) {
+        PageRequest pageRequest = createPageRequest(page, size, sortBy); // 종료임박순, 최신순 처리
+        // 카테고리 ID를 조회
+        Long categoryId = null;
+        if (category != null && !category.isEmpty()) {
+            Optional<Categories> categoryEntityOptional = categoriesRepository.findByName(category);
+            if (categoryEntityOptional.isPresent()) {
+                categoryId = categoryEntityOptional.get().getId();
+            }
+        }
+        // 상품 검색 쿼리 호출
+        Page<Goods> goodsPage;
+        if (GoodsFilter.POPULAR.equals(sortBy)) { // 인기순 처리
+            goodsPage = goodsRepository.searchGoodsByRaffleCount(goodsStatus, categoryId, keyword, pageRequest);
+        } else {
+            goodsPage = goodsRepository.searchGoods(goodsStatus, categoryId, keyword, pageRequest);
+        }
 
-        List<GoodsResponse.GoodsSearchResponseDTO> goodsSearchDTOList = goodsList.stream()
-                .map(goods -> {
-                    GoodsCategories goodsCategories = goodsCategoriesRepository.findByGoodsId(goods).orElseThrow(() -> new ApiException(ErrorStatus._GOODS_CATEGORY_NOT_FOUND));
-                    Categories category = categoriesRepository.findById(goodsCategories.getCategoryId().getId()).orElseThrow(() -> new ApiException(ErrorStatus._CATEGORY_NOT_FOUND));
-                    return GoodsResponse.GoodsSearchResponseDTO.of(goods, category.getName());
-                })
-                .collect(Collectors.toList());
-
+        List<GoodsResponse.GoodsSearchResponseDTO> goodsSearchDTOList = goodsPage.getContent().stream()
+                .map(g -> GoodsResponse.GoodsSearchResponseDTO.of(g, category))
+                .toList();
         return GoodsResponse.GoodsListSearchResponseDTO.builder()
                 .goodsSearchDTOList(goodsSearchDTOList)
                 .build();
     }
 
+    // 선택된 기준으로 정렬
+    private PageRequest createPageRequest(Integer page, Integer size, GoodsFilter sortBy) {
+        Sort sort;
+        switch (sortBy) {
+            case NEWEST: // 최신순
+                sort = Sort.by(Sort.Order.desc("createdAt"), Sort.Order.asc("id"));
+                break;
+            case END: // 종료임박순
+                sort = Sort.by(Sort.Order.asc("raffleEndAt"), Sort.Order.asc("id"));
+                break;
+            default:
+                sort = Sort.by(Sort.Order.desc("id")); // 기본
+        }
+        return PageRequest.of(page, size, sort);
+    }
 }
