@@ -1,17 +1,23 @@
 package com._pi.benepick.domain.members.service;
 
-import com._pi.benepick.domain.goods.entity.Goods;
 import com._pi.benepick.domain.members.dto.MembersResponse.*;
 import com._pi.benepick.domain.members.entity.Members;
 import com._pi.benepick.domain.members.repository.MembersRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
+
+import com._pi.benepick.domain.pointHists.dto.PointResponse.*;
+import com._pi.benepick.domain.pointHists.entity.PointHists;
+import com._pi.benepick.domain.pointHists.repository.PointHistsRepository;
+import com._pi.benepick.global.common.exception.ApiException;
+import com._pi.benepick.global.common.response.code.status.ErrorStatus;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
@@ -19,8 +25,10 @@ import java.util.stream.Collectors;
 public class MembersQueryServiceImpl implements MembersQueryService {
     private final MembersRepository membersRepository;
 
+    private final PointHistsRepository pointHistsRepository;
     @Override
     public MembersDetailListResponseDTO getMembersList(Integer page, Integer size, String keyword){
+
         PageRequest pageRequest = PageRequest.of(page, size);
         Page<Members> membersPage;
         if(keyword !=null && !keyword.isEmpty()){
@@ -29,10 +37,33 @@ public class MembersQueryServiceImpl implements MembersQueryService {
         else {
             membersPage=membersRepository.findAll(pageRequest);
         }
-        List<MembersDetailResponseDTO> membersDetailResponseDTOList=membersPage.getContent().stream().map(MembersDetailResponseDTO::from).collect(Collectors.toList());
+        List<MembersDetailResponseDTO> membersDetailResponseDTOList=membersPage.getContent().stream().map(MembersDetailResponseDTO::from).toList();
 
         return MembersDetailListResponseDTO.builder()
                 .membersDetailResponseDTOList(membersDetailResponseDTOList)
+                .build();
+
+    }
+
+
+    @Override
+        public MembersDetailResponseDTO getMemberinfo(String id) {
+            Members members = membersRepository.findById(id).orElseThrow(() -> new ApiException(ErrorStatus._MEMBERS_NOT_FOUND));
+
+            return MembersDetailResponseDTO.from(members);
+        }
+
+
+
+    //복지 포인트 내역 조회
+    @Override
+    public PointHistListDTO getPointHist(Members member) {
+        List<PointHists> pointHists = pointHistsRepository.findAllByMemberId(member.getId());
+        List<PointHistDTO> pointHistDTOS=pointHists.stream()
+                .map(PointHistDTO::from)
+                .toList();
+        return PointHistListDTO.builder()
+                .pointHistDTOS(pointHistDTOS)
                 .build();
     }
 
